# pin-rc

./: Cargo.toml  rustfmt.toml
src/: generic_rc.rs  lib.rs
tests/: test.rs
